--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-details/restaurants-details.component.css
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-details/restaurants-details.component.css
@@ -1,6 +1,6 @@
 .content-wrapper {
     display: flex;
-    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .restaurant-info {
@@ -10,7 +10,7 @@
     border-radius: 5px;
 }
 
-.restaurant-info > h1 {
+.restaurant-info>h1 {
     color: var(--primary);
     font-style: italic;
 }
@@ -20,9 +20,12 @@
     border: 1px solid var(--primary);
     padding: 1rem;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.restaurant-description > h1 {
+.restaurant-description>h1 {
     color: var(--primary);
     font-style: italic;
 }
@@ -46,7 +49,28 @@
     margin-top: 2rem;
 }
 
+.social-btn-wrapper {
+    justify-content: space-evenly;
+}
+
+.description-btns-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: var(--primary);
+}
+
+.description-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media only screen and (max-width: 960px) {
+    .content-wrapper {
+        flex-direction: column;
+    }
+
     .restaurant-info {
         flex: 100%;
     }
