--- a/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.css
+++ b/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.css
@@ -1,36 +1,48 @@
 .image-wrapper {
-    width: 300px;
-    height: 300px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: black;
-    border-radius: 5px;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .image-wrapper > button {
-    position: absolute;
-    top: 0;
-    right: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .is-profile-chip {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background-color: var(--primary) !important;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: var(--primary) !important;
 }
 
 .size-chip {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.spinner-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 960px) {
-    .image-wrapper {
-        width: 100%;
-        height: auto;
-    }
+  .image-wrapper {
+    width: 100%;
+    height: auto;
+  }
 }
