--- a/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
+++ b/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
@@ -1,18 +1,26 @@
 <div
   *ngIf="image"
+  (click)="onFullScreen()"
   class="image-wrapper"
   [ngStyle]="{
     border: isMain ? '1px solid var(--primary)' : '1px solid var(--accent)'
   }"
 >
   <mat-chip class="is-profile-chip" *ngIf="isMain">Profile picture</mat-chip>
-  <button mat-icon-button color="warn">
+  <button mat-icon-button color="warn" (click)="onDelete($event)">
     <mat-icon svgIcon="delete"></mat-icon>
   </button>
+  <div class="spinner-wrapper" *ngIf="isLoading">
+    <mat-spinner
+      color="{{ isMain ? 'primary' : 'accent' }}"
+    ></mat-spinner>
+  </div>
   <img
     src="{{ image.url || 'assets/img/default.png' }}"
     class="img"
     alt="picture"
+    (load)="isLoading = false"
+    (error)="image.url = 'assets/img/default.png'"
   />
   <mat-chip class="size-chip">{{ image.size | fileSize }}</mat-chip>
 </div>
