--- a/owner/owner-client/src/styles.css
+++ b/owner/owner-client/src/styles.css
@@ -47,3 +47,9 @@ body {
     --mdc-snackbar-supporting-text-color: #fff;
   }
 }
+
+
+.full-screen-image-backdrop {
+  background-color: black;
+  opacity: 0.8 !important;
+}
