--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-edit/restaurants-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-edit/restaurants-edit.component.html
@@ -1,87 +1,154 @@
-<form class="form-wrapper">
-    <div class="info-wrapper">
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Name</mat-label>
-            <input matInput placeholder="Enter restaurant name">
-          </mat-form-field>
+<form class="form-wrapper" *ngIf="restaurantForm" [formGroup]="restaurantForm" (ngSubmit)="onSubmit()">
+  <div class="info-wrapper">
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Name</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant name"
+        formControlName="name"
+      />
+    </mat-form-field>
 
-          <div class="two-col">
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Country</mat-label>
-                <input matInput placeholder="Enter restaurant city">
-              </mat-form-field>
-              <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Postal Code</mat-label>
-                <input matInput placeholder="Enter restaurant postal code">
-              </mat-form-field>
-          </div>
-
-          <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Phone</mat-label>
-            <input matInput placeholder="Enter restaurant phone">
-          </mat-form-field>
-
-          <div class="two-col">
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>City</mat-label>
-                <input matInput placeholder="Enter restaurant city">
-              </mat-form-field>
-              <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Address</mat-label>
-                <input matInput placeholder="Enter restaurant Address">
-              </mat-form-field>
-          </div>
-
-          <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>facebook</mat-label>
-            <input matInput placeholder="Enter facebook url">
-            <mat-icon matPrefix svgIcon="facebook-logo"></mat-icon>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>instagram</mat-label>
-            <input matInput placeholder="Enter instagram url">
-            <mat-icon matPrefix svgIcon="instagram-logo"></mat-icon>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>website</mat-label>
-            <input matInput placeholder="Enter website url">
-            <mat-icon matPrefix svgIcon="globe"></mat-icon>
-          </mat-form-field>
+    <div class="two-col">
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Country</mat-label>
+        <input
+          matInput
+          placeholder="Enter restaurant city"
+          formControlName="country"
+        />
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Postal Code</mat-label>
+        <input
+          matInput
+          placeholder="Enter restaurant postal code"
+          formControlName="postalCode"
+        />
+      </mat-form-field>
     </div>
-    <div class="description-wrapper">
-        <mat-form-field class="input-wrapper" appearance="outline">
-            <mat-label>Description</mat-label>
-            <textarea matInput placeholder="Enter restaurant description"></textarea>
-          </mat-form-field>
 
-          <div class="is-active-wrapper">
-            <mat-slide-toggle color="primary">Show in searces</mat-slide-toggle>
-            <mat-chip style="background-color: var(--success);">Active</mat-chip>
-          </div>
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Phone</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant phone"
+        formControlName="phone"
+      />
+    </mat-form-field>
 
-          <div class="btn-wrapper">
-            <button mat-raised-button type="button" color="accent" class="input-wrapper">
-                <mat-icon svgIcon="image"></mat-icon>
-                Add Profile Image
-            </button>
-            <button mat-raised-button type="button" color="accent" class="input-wrapper">
-                <mat-icon svgIcon="images"></mat-icon>
-                Restaurant Images
-            </button>
-            <button mat-raised-button color="primary" class="input-wrapper">
-                <mat-icon svgIcon="save"></mat-icon>
-                Save
-            </button>
-          </div>
-
+    <div class="two-col">
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>City</mat-label>
+        <input
+          matInput
+          placeholder="Enter restaurant city"
+          formControlName="city"
+        />
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Address</mat-label>
+        <input
+          matInput
+          placeholder="Enter restaurant Address"
+          formControlName="address"
+        />
+      </mat-form-field>
     </div>
+
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>facebook</mat-label>
+      <input
+        matInput
+        placeholder="Enter facebook url"
+        formControlName="facebookUrl"
+      />
+      <mat-icon matPrefix svgIcon="facebook-logo"></mat-icon>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>instagram</mat-label>
+      <input
+        matInput
+        placeholder="Enter instagram url"
+        formControlName="instagramUrl"
+      />
+      <mat-icon matPrefix svgIcon="instagram-logo"></mat-icon>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>website</mat-label>
+      <input
+        matInput
+        placeholder="Enter website url"
+        formControlName="websiteUrl"
+      />
+      <mat-icon matPrefix svgIcon="globe"></mat-icon>
+    </mat-form-field>
+  </div>
+  <div class="description-wrapper">
+    <mat-form-field class="input-wrapper" appearance="outline">
+      <mat-label>Description</mat-label>
+      <textarea
+        matInput
+        placeholder="Enter restaurant description"
+        formControlName="description"
+        rows="12"
+      ></textarea>
+    </mat-form-field>
+
+    <div class="is-active-wrapper">
+      <mat-slide-toggle color="primary" formControlName="isActive"
+        >Show in searces</mat-slide-toggle
+      >
+      <mat-chip
+        [ngStyle]="{
+          'background-color': restaurantForm.get('isActive')?.value
+            ? 'var(--success)'
+            : 'var(--warning)'
+        }"
+        >{{
+          restaurantForm.get("isActive")?.value ? "Active" : "Inactive"
+        }}</mat-chip
+      >
+    </div>
+
+    <div class="btn-wrapper">
+      <button
+        mat-raised-button
+        type="button"
+        color="accent"
+        class="input-wrapper"
+        (click)="profilePhotoBtn.click()"
+      >
+        <mat-icon svgIcon="image"></mat-icon>
+        Add Profile Image
+      </button>
+
+      <input type="file" style="display: none;" #profilePhotoBtn multiple="false" accept="image/*" (change)="onUploadProfilePhoto($event)">
+      <button
+        mat-raised-button
+        type="button"
+        color="accent"
+        class="input-wrapper"
+      >
+        <mat-icon svgIcon="images"></mat-icon>
+        Restaurant Images
+      </button>
+      <button mat-raised-button color="primary" class="input-wrapper">
+        <mat-icon svgIcon="save"></mat-icon>
+        Save
+      </button>
+    </div>
+  </div>
 </form>
 
-<div class="images-wrapper">
-  <app-image-with-delete [isMain]="true" [image]="images[1]"></app-image-with-delete>
-  <ng-container *ngFor="let image of images">
+<div class="images-wrapper" *ngIf="restaurant">
+  <app-image-with-delete
+    [isMain]="true"
+    [image]="restaurant.profileImage"
+  ></app-image-with-delete>
+  <ng-container *ngFor="let image of restaurant.images">
     <app-image-with-delete [image]="image"></app-image-with-delete>
   </ng-container>
 </div>
