--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.css
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.css
@@ -1,95 +1,54 @@
-.main-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
+.form-wrapper {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.restaurant-form {
-  flex: 50%;
-  padding: 1rem;
-}
-
-.restaurant-images {
-  flex: 50%;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.5rem;
-}
-
-.input-wrapper {
-  width: 100%;
+.info-wrapper {
+    flex: 50%;
+    padding: 1rem;
 }
 
 .two-col {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
 }
 
-.gallery-wrapper {
-  max-width: 25rem;
+.description-wrapper {
+    flex: 50%;
+    padding: 1rem;
 }
 
-.img {
-  border-radius: 10px;
-  border: 2px solid var(--primary);
-  max-height: 20rem;
-}
-
-.btn-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.save-btn-wrapper {
-  width: 100%;
-}
-
-.save-btn-wrapper>button {
-  width: 100%;
+.input-wrapper {
+    width: 100%;
 }
 
 .slide-wrapper {
-  display: flex;
-  padding: 2rem 0;
-  align-items: center;
-  justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.mat-chip {
-  background-color: var(--success);
+.btn-wrapper {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
-.mat-chip-active {
-  background-color: var(--success);
+.btn-full {
+    width: 100%;
 }
 
 @media (max-width: 960px) {
+    .info-wrapper,
+    .description-wrapper {
+        flex: 100%;
+        padding: 0;
+    }
 
-  .restaurant-form,
-  .restaurant-images {
-    flex: 100%;
-  }
-
-  .gallery-wrapper {
-    max-width: 21rem;
-  }
-
-  .two-col {
-    flex-direction: column;
-    gap: 0;
-  }
-
-  .btn-wrapper {
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .btn-wrapper>button {
-    width: 100%;
-  }
+    .two-col {
+        flex-direction: column;
+        gap: 0;
+    }
 }
