Added photo gallery to restaurant create

--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.css
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.css
@@ -40,6 +40,12 @@
     width: 100%;
 }
 
+.images-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
 @media (max-width: 960px) {
     .info-wrapper,
     .description-wrapper {
