--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.html
@@ -90,3 +90,10 @@
 
     </div>
 </form>
+
+<div class="images-wrapper">
+    <app-image-with-delete [isMain]="true" [image]="profileImage"></app-image-with-delete>
+    <ng-container>
+        
+    </ng-container>
+</div>
