Added spinner on load image in restaurant card

--- a/owner/owner-client/src/app/_components/restaurant-card/restaurant-card.component.css
+++ b/owner/owner-client/src/app/_components/restaurant-card/restaurant-card.component.css
@@ -8,8 +8,23 @@
     border: 1px solid var(--primary);
 }
 
-.img {
+
+.img-wrapper {
+    width: 100%;
     height: 10rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.spinner-wrapper {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 mat-card-header {
