Added employees layout

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.html
@@ -1,17 +1,26 @@
 <div class="logo-wrapper">
-    <img src="assets/img/costic-logo-216x62.png" class="logo" alt="logo">
+  <img src="assets/img/costic-logo-216x62.png" class="logo" alt="logo" />
 </div>
 <div class="side-nav-item-wrapper">
-    <app-side-nav-item [name]="'home'" [url]="'/home'">
-        <mat-icon svgIcon="home" class="svg"></mat-icon>
-    </app-side-nav-item>
-    <app-side-nav-dropdown [name]="'restaurants'" [itemListObj]="restaurantsLinkItems">
-        <mat-icon class="svg" svgIcon="restaurant"></mat-icon>
-    </app-side-nav-dropdown>
-    <app-side-nav-item [name]="'employees'" [url]="'/employees'">
+  <app-side-nav-item [name]="'home'" [url]="'/home'">
+    <mat-icon svgIcon="home" class="svg"></mat-icon>
+  </app-side-nav-item>
+  <app-side-nav-dropdown
+    [name]="'restaurants'"
+    [itemListObj]="restaurantsLinkItems"
+  >
+    <mat-icon class="svg" svgIcon="restaurant"></mat-icon>
+  </app-side-nav-dropdown>
+  <!-- <app-side-nav-item [name]="'employees'" [url]="'/employees'">
         <mat-icon class="svg" svgIcon="users"></mat-icon>
-    </app-side-nav-item>
-    <app-side-nav-item [name]="'menus'" [url]="'menus'">
-        <mat-icon class="svg" svgIcon="menu"></mat-icon>
-    </app-side-nav-item>
+    </app-side-nav-item> -->
+  <app-side-nav-dropdown
+    [name]="'employees'"
+    [itemListObj]="employeesLinkItems"
+  >
+    <mat-icon class="svg" svgIcon="users"></mat-icon>
+  </app-side-nav-dropdown>
+  <app-side-nav-item [name]="'menus'" [url]="'menus'">
+    <mat-icon class="svg" svgIcon="menu"></mat-icon>
+  </app-side-nav-item>
 </div>
