Created design for employee create component

--- a/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
+++ b/owner/owner-client/src/app/_components/image-with-delete/image-with-delete.component.html
@@ -7,7 +7,7 @@
   }"
 >
   <mat-chip class="is-profile-chip" *ngIf="isMain">Profile picture</mat-chip>
-  <button mat-icon-button color="warn" (click)="onDelete($event)">
+  <button mat-icon-button color="warn" type="button" (click)="onDelete($event)">
     <mat-icon svgIcon="delete"></mat-icon>
   </button>
   <div class="spinner-wrapper" *ngIf="isLoading">
