--- a/owner/owner-client/src/app/_components/folder-window/folder-window.component.css
+++ b/owner/owner-client/src/app/_components/folder-window/folder-window.component.css
@@ -1,3 +1,8 @@
+.toolbar-wrapper {
+    display: flex;
+    align-items: center;
+}
+
 .btn-wrapper {
     display: flex;
     margin-left: 1rem;
@@ -8,4 +13,28 @@
     border: 1px solid var(--primary);
     border-top: none;
     border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+@media (max-width: 960px) {
+    .content-wrapper {
+        justify-content: center;
+    }
+
+    .btn-wrapper {
+        display: none;
+    }
+
+    .toolbar-wrapper {
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 959.98px) {
+    .toggle-btns {
+        display: none;
+    }
 }
