Added file item

--- a/owner/owner-client/src/app/_components/folder-window/folder-window.component.html
+++ b/owner/owner-client/src/app/_components/folder-window/folder-window.component.html
@@ -36,12 +36,11 @@
         <app-folder-item></app-folder-item>
         <app-folder-item></app-folder-item>
         <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
-        <app-folder-item></app-folder-item>
+        <app-file-item></app-file-item>
+        <app-file-item></app-file-item>
+        <app-file-item></app-file-item>
+        <app-file-item></app-file-item>
+        <app-file-item></app-file-item>
+
     </div>
 </div>
