--- a/owner/owner-client/src/app/_components/folder-window/file-item/file-item.component.css
+++ b/owner/owner-client/src/app/_components/folder-window/file-item/file-item.component.css
@@ -1,7 +1,8 @@
 .main-wrapper {
-    display: flex;
     width: min-content;
+    display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .main-wrapper:hover > button {
@@ -9,16 +10,20 @@
 }
 
 .info-wrapper {
-    cursor: pointer;
+    display: flex;
+    flex-direction: column;
 }
 
-.folder-name {
+.name {
+    white-space: nowrap;
     font-size: 16px;
-    white-space: nowrap;
 }
 
-.folder-date {
-    font-size: 10px;
+.date {
     white-space: nowrap;
+    font-size: 10px;
     color: var(--primary);
 }
+
+
+
