--- a/owner/owner-client/src/app/_components/folder-window/folder-item/folder-item.component.html
+++ b/owner/owner-client/src/app/_components/folder-window/folder-item/folder-item.component.html
@@ -7,9 +7,10 @@
         <div class="folder-date">jan 24, 2023</div>
     </div>
 
-<mat-menu #menu="matMenu">
-  <button mat-menu-item>Edit</button>
-  <button mat-menu-item (click)="onDelete()">Delete</button>
-</mat-menu>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>Open</button>
+        <button mat-menu-item>Edit</button>
+        <button mat-menu-item (click)="onDelete()">Delete</button>
+    </mat-menu>
 
 </div>
