--- a/owner/owner-client/src/app/_components/folder-window/folder-item/folder-item.component.html
+++ b/owner/owner-client/src/app/_components/folder-window/folder-item/folder-item.component.html
@@ -1,16 +1,16 @@
-<div class="main-wrapper" matTooltip="some description of that folder">
-    <button type="button" mat-icon-button>
+<div *ngIf="folder" class="main-wrapper" matTooltip="{{ folder.description }}">
+    <button type="button" mat-icon-button (click)="onOpenFolder()">
         <mat-icon svgIcon="folder"></mat-icon>
     </button>
     <div class="info-wrapper" [matMenuTriggerFor]="menu">
-        <div class="folder-name">Ime foldera</div>
-        <div class="folder-date">jan 24, 2023</div>
+        <div class="folder-name">{{ folder.name }}</div>
+        <div class="folder-date">{{ folder.createdAt | date }}</div>
     </div>
 
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>Open</button>
-        <button mat-menu-item>Edit</button>
-        <button mat-menu-item (click)="onDelete()">Delete</button>
+        <button mat-menu-item type="button" (click)="onOpenFolder()">Open</button>
+        <button mat-menu-item type="button">Edit</button>
+        <button mat-menu-item type="button" (click)="onDelete()">Delete</button>
     </mat-menu>
 
 </div>
